Release history for Joose:

{{ $NEXT }}

3.016     2010-12-14 15:33

    [ENHANCEMENTS]
    
    - throw 'Error' instances instead of plain strings in various places
    - initial progress on reflection, allowing to receive the currently running method
    
    [API CHANGES]

    - setters no longer are being used for initial instance initialization (prior 'initialize' method)
    
    [BUG FIXES]
    
    - fixed a very specific bug, related to subclassing non-joose classes with custom constructor


3.015     2010-11-15 13:31


    [ENHANCEMENTS]
    
    - links to OpenJSAN in the documentation replaced with links to GitHub
    
    [API CHANGES]

    -none-
    
    [BUG FIXES]
    
    -none-


3.014     2010-11-01 10:32

    
    [ENHANCEMENTS]
    
    - switching to `npm` only as the distribution channel (migrating from JSAN)
    
    [API CHANGES]

    -none-
    
    [BUG FIXES]
    
    - fixed bug, when instantiating a class with traits and which is a subclass of non-joose class
      it could have been instantiated with wrong parameters

3.013     2010-10-11 15:57

    [ENHANCEMENTS]
    
    -none-
    
    [API CHANGES]

    - returned 'get/setRawValue' methods of the attribute with a bit different semantic (low-level, not documented)
    
    [BUG FIXES]
    
    - none 

3.012     2010-10-05 11:33

    [ENHANCEMENTS]
    
    - added 'hasValue/clearValue' methods for the attribute
    - removed 'get/setRawValue' methods of the attribute
    
    - minor fixes in package.json for `npm`
    
    [API CHANGES]

    -none-

    
    [BUG FIXES]
    
    -none-

3.011     2010-08-27 21:11

    [ENHANCEMENTS]
    
    - references to global RegExp object replaced with references to constructor of regexp instance,
      to allow the advanced optimizations with Google Closure optimizer (thanks to: sirrobert)
      
    - now its possible to inherit from non-Joose superclasses 
        (see http://openjsan.org/go/?l=Joose.Manual.Classes for details)
    