@@ -17,16 +17,14 @@ Joose.A = {
         scope = scope || this
         
         for (var i = 0, len = array.length; i < len; i++) 
-            if (func.call(scope, array[i], i, array) === false) return false
+            if (func.call(scope, array[i], i) === false) return false
     },
     
     
     eachR : function (array, func, scope) {
         scope = scope || this
-        
-        var i = array.length - 1
-        
-        while (i--) 
+
+        for (var i = array.length - 1; i >= 0; i--) 
             if (func.call(scope, array[i], i) === false) return false
     },
     
