@@ -8,20 +8,29 @@ Joose.Managed.PropertySet.Composition = new Joose.Proto.Class('Joose.Managed.Pro
 
     
     each : function (func, scope) {
-        var props = this.properties
+        var props   = this.properties
+        var scope   = scope || this
         
         Joose.A.each(this.processOrder, function (name) {
-            func.call(scope || this, props[name], name)
-        }, this)
+            func.call(scope, props[name], name)
+        })
     },
     
     
     eachR : function (func, scope) {
-        var props           = this.properties
-        var processOrder    = this.processOrder
+        var props   = this.properties
+        var scope   = scope || this
         
-        for(var i = processOrder.length - 1; i >= 0; i--) 
-            func.call(scope || this, props[ processOrder[i] ], processOrder[i])
+        Joose.A.eachR(this.processOrder, function (name) {
+            func.call(scope, props[name], name)
+        })
+        
+        
+//        var props           = this.properties
+//        var processOrder    = this.processOrder
+//        
+//        for(var i = processOrder.length - 1; i >= 0; i--) 
+//            func.call(scope || this, props[ processOrder[i] ], processOrder[i])
     },
     
     
