@@ -2,6 +2,9 @@ Release history for Joose:
 
 {{ $NEXT }}
 
+    - added `strToClass` helper function
+    - added Joose.A.eachR iterator
+
 3.016     2010-12-14 15:33
 
     [ENHANCEMENTS]
